Alterações em pom.xml, application.properties, Venda e VendaRequestDTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=gestao-estoque-caixa
+spring.application.name=gestao-caixa-estoque
+
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/db-gestao-caixa-estoque;DB_CLOSE_ON_EXIT=FALSE
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.app=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+management.endpoints.web.exposure.include=*
+
+
+
+
